# hs-gauges

./: LICENSE  Main.hs  README.md  TODO.md  gauges.cabal  guages.cabal
Gauges/API/: Client.hs  Data.hs  Requestable.hs  Resources.hs
Gauges/CLI/: Credentials.hs  Display.hs  GaugeCache.hs  Help.hs  Interact.hs  Spark.hs
Guages/API/: Client.hs  Requestable.hs  Resources.hs
Guages/CLI/: Credentials.hs
