Name:            Gauges
Version:         0.0.0
Build-Type:      Simple
Cabal-Version:   >= 1.2
Author:          Jordan West
License-File:    LICENSE
License:         MIT

library 
  exposed-modules: Gauges.API.Resources
                   Gauges.API.Client
                   Gauges.API.Requestable
                   Gauges.API.Data
  build-depends:   base, directory, haskell98, process, curl == 1.3.7, json == 0.5		  		 

Executable gauges
  Main-Is:        Main.hs
  Hs-Source-Dirs: .